Update 01-installation.md
Updates to mention java 8 and remove maxpermsize which is removed in Java 8