@@ -3,7 +3,7 @@
 ### System Architecture
 
 Rundeck is a server application you host on a system you designate 
-a central administrative control point. Internally, Rundeck stores job
+as a central administrative control point. Internally, Rundeck stores job
 definitions and execution history in a relational database. Output
 from command and job executions is saved on disk but can be forwarded
 to remote stores like S3 or Logstash. 
@@ -70,7 +70,7 @@ to have access via [sudo].
 Rundeck is a Java-Servlet based server and therefore requires the Java
 runtime.
 
-The install process requires that the latest version of Java 1.7
+The install process requires that the latest version of Java 1.8
 be installed. Both the [Open JDK](http://openjdk.java.net/) and [Sun/Oracle](http://java.com/) JVMs can be used.
 You must have the JAVA_HOME environment variable defined
 in your environment before running the launcher.  The RPM will use the java found on your path. See [Setting JAVA_HOME](startup-and-shutdown.html#setting-java_home) if you want to run a different version of java.
@@ -82,9 +82,9 @@ $ java -version
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-java version "1.7.0_55"
-OpenJDK Runtime Environment (rhel-2.4.7.1.el6_5-x86_64 u55-b13)
-OpenJDK 64-Bit Server VM (build 24.51-b03, mixed mode)
+java version "1.8.0_51"
+OpenJDK Runtime Environment (build 1.8.0_51-b16)
+OpenJDK 64-Bit Server VM (build 25.51-b03, mixed mode)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 
 #### Network access
@@ -148,7 +148,7 @@ documentation as well.
 
 Note: The latest install documentation is available at <http://rundeck.org/downloads.html>.
 
-Note, the java JDK must be installed. Install any JDK that is 1.7+.
+Note, the java JDK must be installed. Install any JDK that is 1.8+.
 
 If you want to install Rundeck on Linux via a binary installer, you
 can generally do so through the RPM tool that comes with your distribution. 
@@ -185,14 +185,14 @@ Use the launcher as an alternative to a system package:
 1. Copy the launcher jar to the installation directory.
 
     ~~~~~~~ {.bash}
-    cp rundeck-launcher-2.0.0.jar $RDECK_BASE
+    cp rundeck-launcher-2.5.2.jar $RDECK_BASE
     ~~~~~~~
 
 1. Change directory and run the jar.
 
     ~~~~~~~ {.bash}
     cd $RDECK_BASE    
-    java -XX:MaxPermSize=256m -Xmx1024m -jar rundeck-launcher-2.0.0.jar
+    java -Xmx1024m -jar rundeck-launcher-2.5.2.jar
     ~~~~~~~
 
 1. Wait for the Started message.
@@ -223,7 +223,7 @@ rundeck launcher process.
 The launcher jar can take a number of options to specify how the server should start. If you execute with a "-h" you will see the usage information:
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {.bash}
-java -XX:MaxPermSize=256m -Xmx1024m -jar rundeck-launcher-2.1.0.jar -h
+java -Xmx1024m -jar rundeck-launcher-2.5.2.jar -h
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 
     usage: java [JAVA_OPTIONS] -jar rundeck-launcher.jar  [-c PATH] [-d]
